--- a/index.html
+++ b/index.html
@@ -1,39 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Study Quest</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1>📚 Study Quest</h1>
-        
+    <div class="game-container">
+        <!-- Header -->
+        <header>
+            <h1>STUDY QUEST</h1>
+            <nav>
+                <a href="shop.html" class="nav-button">🛍️ Shop</a>
+            </nav>
+        </header>
+
         <!-- Player Stats -->
-        <div class="stats">
-            <p>👤 <span id="player-name">Player</span></p>
-            <p>⭐ Level: <span id="level">1</span></p>
-            <p>⚡ XP: <span id="xp">0</span>/<span id="next-level">200</span></p>
-            <p>🔥 Streak: <span id="streak">0</span> days</p>
+        <div class="stats-panel">
+            <div class="stat">
+                <span class="stat-label">LEVEL</span>
+                <span id="level" class="stat-value">1</span>
+            </div>
+            <div class="stat">
+                <span class="stat-label">XP</span>
+                <span id="xp" class="stat-value">0</span>/<span id="next-level">200</span>
+            </div>
+            <div class="stat">
+                <span class="stat-label">STREAK</span>
+                <span id="streak" class="stat-value">0</span> days
+            </div>
+        </div>
+
+        <!-- XP Progress Bar -->
+        <div class="progress-bar">
+            <div id="xp-bar" class="progress-fill"></div>
+        </div>
+
+        <!-- Timer -->
+        <div class="timer-panel">
+            <div id="timer-display">00:00:00</div>
+            <div class="timer-controls">
+                <button id="start-timer" class="timer-button">▶️ Start</button>
+                <button id="stop-timer" class="timer-button">⏹️ Stop</button>
+                <button id="log-study" class="timer-button">📝 Log Study</button>
+            </div>
         </div>
 
         <!-- Actions -->
-        <div class="actions">
-            <button id="study-btn">📚 Study (50 XP)</button>
-            <button id="boss-btn">⚔️ Boss Battle (100 XP)</button>
-            <button id="shop-btn">🛍️ Shop</button>
+        <div class="action-buttons">
+            <button id="boss-battle" class="action-button">⚔️ Boss Battle</button>
         </div>
 
-        <!-- Shop (Hidden by Default) -->
-        <div id="shop" class="hidden">
-            <h3>🛍️ Rewards Shop</h3>
-            <ul id="rewards-list"></ul>
-            <button id="close-shop">Close</button>
+        <!-- Activity Log -->
+        <div class="log-panel">
+            <h3>📜 ACTIVITY LOG</h3>
+            <div id="log"></div>
         </div>
-
-        <!-- Log -->
-        <div id="log"></div>
     </div>
 
     <script src="script.js"></script>
