--- a/shop.html
+++ b/shop.html
@@ -3,25 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#6c5ce7">
     <title>Study Quest - Shop</title>
     <link rel="stylesheet" href="style.css">
+    <link id="theme-style" rel="stylesheet" href="themes/default.css">
 </head>
 <body>
+    <div class="particle-container" id="particles"></div>
+    
     <div class="game-container">
         <header>
             <h1>🛍️ REWARDS SHOP</h1>
             <nav>
                 <a href="index.html" class="nav-button">🔙 Back</a>
+                <div class="theme-switcher">
+                    <button data-theme="default">🌞</button>
+                    <button data-theme="cyberpunk">🌃</button>
+                    <button data-theme="fantasy">🏰</button>
+                    <button data-theme="retro">👾</button>
+                </div>
             </nav>
         </header>
 
-        <div class="shop-panel">
+        <div class="glass-panel shop-panel">
             <div class="stats-panel">
-                <span>XP: <span id="shop-xp">0</span></span>
+                <span>Your XP: <span id="shop-xp" class="xp-count">0</span></span>
             </div>
             <div id="rewards-list" class="rewards-grid"></div>
         </div>
     </div>
+
+    <audio id="sound-click" src="assets/sounds/button-click.mp3" preload="auto"></audio>
+    <audio id="sound-purchase" src="assets/sounds/purchase.mp3" preload="auto"></audio>
 
     <script src="shop.js"></script>
 </body>
